--- a/app/src/main/res/layout/adapter_news.xml
+++ b/app/src/main/res/layout/adapter_news.xml
@@ -35,7 +35,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
-                android:maxLines="2"
+                android:lines="2"
                 android:text="资讯信息资讯信息"
                 android:textColor="@color/black"
                 android:textSize="45px" />
@@ -46,7 +46,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10px"
                 android:ellipsize="end"
-                android:maxLines="2"
+                android:lines="2"
                 android:text="息资讯信息资讯信息"
                 android:textColor="@color/text_gray"
                 android:textSize="38px" />
