--- a/app/src/main/res/layout/head_information.xml
+++ b/app/src/main/res/layout/head_information.xml
@@ -2,13 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/information_header"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <top.smartsport.www.widget.banner.Banner
         android:id="@+id/banner"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="480px"/>
 
     <TextView
         android:id="@+id/title_name_tv"
