--- a/app/src/main/res/layout/adapter_pic.xml
+++ b/app/src/main/res/layout/adapter_pic.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    >
     <ImageView
+        android:layout_centerInParent="true"
         android:id="@+id/image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="330px"
+        android:layout_height="330px"
         android:scaleType="fitXY"/>
 
-</LinearLayout>
+</RelativeLayout>
