--- a/app/src/main/res/layout/fragment_wd.xml
+++ b/app/src/main/res/layout/fragment_wd.xml
@@ -61,7 +61,7 @@
             android:gravity="center_vertical">
 
 
-            <top.smartsport.www.widget.RoundImageView
+            <top.smartsport.www.widget.utils.RoundImageView
                 android:id="@+id/wd_header"
                 android:layout_width="213px"
                 android:layout_height="213px"
