--- a/app/src/main/res/layout/layout_actionbar.xml
+++ b/app/src/main/res/layout/layout_actionbar.xml
@@ -3,20 +3,33 @@
     android:layout_width="match_parent"
     android:layout_height="145px"
     android:background="@color/theme_color">
+<ImageView
+    android:id="@+id/iv_back"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignParentLeft="true"
+    android:layout_centerVertical="true"
+    android:src="@drawable/arrow_left"
 
+    android:gravity="center_vertical"
+
+    android:layout_marginLeft="30px"
+    />
     <TextView
+        android:layout_toRightOf="@+id/iv_back"
         android:id="@+id/ivLeft"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
         android:focusable="true"
-        android:layout_marginLeft="30px"
+
+        android:layout_marginLeft="15px"
         android:text="返回"
-        android:textSize="38px"
+
+        android:textSize="52px"
         android:gravity="center_vertical"
         android:textColor="@color/white"
-        android:drawableLeft="@drawable/arrow_left" />
+        />
 
     <TextView
         android:id="@+id/tvTitle"
