--- a/app/src/main/res/layout/layout_horizontal_scrollview.xml
+++ b/app/src/main/res/layout/layout_horizontal_scrollview.xml
@@ -2,13 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="30px">
+    android:layout_marginBottom="25px">
 
     <top.smartsport.www.widget.HorizontalListView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="838px"
         android:scrollbars="none"
-        android:background="@color/white"
+        android:background="@color/bg_gray"
         android:id="@+id/listview"
         android:listSelector="#00000000"
         >
