--- a/app/src/main/res/layout/activity_add_member_detail.xml
+++ b/app/src/main/res/layout/activity_add_member_detail.xml
@@ -37,7 +37,7 @@
             android:gravity="center_vertical">
 
 
-            <top.smartsport.www.widget.RoundImageView
+            <top.smartsport.www.widget.utils.RoundImageView
                 android:id="@+id/account_header"
                 android:layout_width="213px"
                 android:layout_height="213px"
