--- a/app/src/main/res/layout/fragment_zxqx.xml
+++ b/app/src/main/res/layout/fragment_zxqx.xml
@@ -202,11 +202,14 @@
                     android:letterSpacing="0.05"/>
 
             </LinearLayout>
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                >
             <include
-                android:layout_marginBottom="30px"
                 layout="@layout/layout_horizontal_scrollview"
-                android:layout_width="880px"
-                android:layout_height="wrap_content" />
+                />
+            </FrameLayout>
 
         </LinearLayout>
 
