--- a/app/src/main/res/layout/sc_kecheng.xml
+++ b/app/src/main/res/layout/sc_kecheng.xml
@@ -66,7 +66,7 @@
     </LinearLayout>
     <View android:layout_width="match_parent" android:layout_height="0.8dip" android:background="@color/text_hint"/>
     <RelativeLayout android:layout_width="match_parent" android:layout_height="40dip">
-        <top.smartsport.www.widget.RoundImageView android:id="@+id/coach_head" android:layout_marginLeft="10dip" android:layout_height="25dip" android:layout_width="25dip" android:layout_centerVertical="true"
+        <top.smartsport.www.widget.utils.RoundImageView android:id="@+id/coach_head" android:layout_marginLeft="10dip" android:layout_height="25dip" android:layout_width="25dip" android:layout_centerVertical="true"
             android:src="@mipmap/tuijian_touxiang6"
         />
         <TextView android:layout_width="wrap_content" android:layout_marginLeft="10dip" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_toRightOf="@+id/coach_head" android:id="@+id/coach_name"
@@ -211,7 +211,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/layout_height">
-            <top.smartsport.www.widget.RoundImageView
+            <top.smartsport.www.widget.utils.RoundImageView
                 android:id="@+id/coach_head2"
                 android:layout_marginLeft="10dip"
                 android:layout_height="50dip"
