--- a/app/src/main/res/layout/activity_ssbm.xml
+++ b/app/src/main/res/layout/activity_ssbm.xml
@@ -406,6 +406,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/ssbm_refund_tv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="退款说明"
@@ -418,6 +419,7 @@
                 android:layout_height="match_parent"
                 android:background="@color/line_color"/>
             <TextView
+                android:id="@+id/ssbm_disclaimer_tv"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:gravity="center"
