数据分析三个子界面请求数据

--- a/app/src/main/res/layout/adapter_scorer_item.xml
+++ b/app/src/main/res/layout/adapter_scorer_item.xml
@@ -30,6 +30,8 @@
             android:layout_height="wrap_content"
             android:textColor="@color/text_gray"
             android:textSize="14sp"
+            android:lines="1"
+            android:ellipsize="end"
             android:text="球员名字" />
     </LinearLayout>
     <TextView
@@ -39,6 +41,8 @@
         android:textColor="@color/text_gray"
         android:gravity="left|center_vertical"
         android:textSize="14sp"
+        android:lines="1"
+        android:ellipsize="end"
         android:text="球队名字" />
     <TextView
         android:id="@+id/scorer_item_score_tv"
