--- a/app/src/main/res/layout/fragment_zxqx.xml
+++ b/app/src/main/res/layout/fragment_zxqx.xml
@@ -188,7 +188,7 @@
                     android:letterSpacing="0.1"/>
 
                 <TextView
-
+                    android:id="@+id/wqqx"
                     android:gravity="right"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
