--- a/app/src/main/res/layout/adapter_analysis_tab_item.xml
+++ b/app/src/main/res/layout/adapter_analysis_tab_item.xml
@@ -7,8 +7,10 @@
         android:id="@+id/tab_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
+        android:textSize="22sp"
         android:layout_centerInParent="true"
+        android:paddingLeft="28px"
+        android:paddingRight="28px"
         android:textColor="@color/custom_tablayout_txt"
         android:text="@string/data_analysis_scoreboard"/>
     <View
