--- a/app/src/main/res/layout/adapter_scorer_item.xml
+++ b/app/src/main/res/layout/adapter_scorer_item.xml
@@ -11,7 +11,6 @@
         style="@style/scoreboard_title_tv_style"
         android:layout_weight="0.8"
         android:textColor="@color/text_gray"
-        android:textSize="14sp"
         android:text="1" />
     <LinearLayout
         android:layout_width="0dp"
@@ -28,9 +27,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/text_gray"
-            android:textSize="14sp"
+            android:textSize="17sp"
             android:lines="1"
             android:ellipsize="end"
+            android:layout_marginLeft="10dp"
             android:text="球员名字" />
     </LinearLayout>
     <TextView
@@ -39,7 +39,6 @@
         android:layout_weight="2"
         android:textColor="@color/text_gray"
         android:gravity="left|center_vertical"
-        android:textSize="14sp"
         android:lines="1"
         android:ellipsize="end"
         android:text="球队名字" />
@@ -48,6 +47,5 @@
         style="@style/scoreboard_title_tv_style"
         android:layout_weight="1"
         android:textColor="@color/text_gray"
-        android:textSize="14sp"
         android:text="13" />
 </LinearLayout>
