--- a/app/src/main/res/layout/activity_qdhome.xml
+++ b/app/src/main/res/layout/activity_qdhome.xml
@@ -5,6 +5,15 @@
     android:background="@color/bg_gray"
     android:orientation="vertical">
 
+    <FrameLayout
+        android:id="@+id/action_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true">
+
+        <include layout="@layout/layout_actionbar" />
+    </FrameLayout>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -28,9 +37,9 @@
 
 
                     <ImageView
-                        android:id="@+id/wd_header"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:id="@+id/wd_logo"
+                        android:layout_width="180px"
+                        android:layout_height="180px"
                         android:layout_marginLeft="50px"
                         android:src="@mipmap/head_default" />
 
@@ -40,10 +49,11 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="50px"
                         android:layout_marginTop="50px"
-                        android:layout_toRightOf="@+id/wd_header"
+                        android:layout_toRightOf="@+id/wd_logo"
                         android:orientation="vertical">
 
                         <TextView
+                            android:id="@+id/tv_qd_name"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="球队名字"
@@ -51,6 +61,7 @@
                             android:textSize="45px" />
 
                         <TextView
+                            android:id="@+id/tv_qd_description"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="球队简介"
@@ -71,12 +82,12 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/textView"
+                        android:id="@+id/tv_ranking"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:text="排名：3"
+                        android:text="排名："
                         android:textColor="@color/white"
                         android:textSize="42px" />
                     <View
@@ -86,7 +97,7 @@
                         />
 
                     <TextView
-                        android:id="@+id/textView2"
+                        android:id="@+id/tv_integral"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -100,6 +111,7 @@
                         android:background="#ffffff"
                         />
                     <TextView
+                        android:id="@+id/tv_win"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -113,6 +125,7 @@
                         android:background="#ffffff"
                         />
                     <TextView
+                        android:id="@+id/tv_draw"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -126,6 +139,7 @@
                         android:background="#ffffff"
                         />
                     <TextView
+                        android:id="@+id/tv_loss"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -139,6 +153,7 @@
             </RelativeLayout>
 
             <TextView
+                android:id="@+id/tv_jl"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="40px"
@@ -155,6 +170,7 @@
                 android:scrollbars="none" />
 
             <TextView
+                android:id="@+id/tv_zj"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="40px"
@@ -172,6 +188,7 @@
 
 
             <TextView
+                android:id="@+id/tv_qy"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="40px"
