--- a/app/src/main/res/layout/activity_service.xml
+++ b/app/src/main/res/layout/activity_service.xml
@@ -22,6 +22,8 @@
             android:id="@+id/about_service_txt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             android:textSize="17sp"/>
     </ScrollView>
 </com.zhy.autolayout.AutoLinearLayout>
