--- a/app/src/main/res/layout/fragment_all_jl.xml
+++ b/app/src/main/res/layout/fragment_all_jl.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <FrameLayout android:visibility="gone"
+    <FrameLayout
         android:id="@+id/action_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
