--- a/app/src/main/res/layout/adapter_wdqd.xml
+++ b/app/src/main/res/layout/adapter_wdqd.xml
@@ -20,7 +20,7 @@
             android:text="上海青少年球队"
             android:textColor="@color/black"
             android:textSize="45px" />
-        <ImageView
+        <ImageView android:visibility="invisible"
             android:id="@+id/adapter_wdqd_check"
             android:layout_alignParentRight="true"
             android:layout_marginRight="40px"
